@@ -1,3 +1,5 @@
+9/29/10 remove debug value node from PlateChargeControlNode, this info is shown in ModelValuesPanel
+9/29/10 when "Remove Wires" is pressed, set Plate Charge control to the plate charge with the battery connected
 9/29/10 change range of Plate Charge slider to go from "lots (+)" to "lots (-)"
 # 0.00.17 (44526) Sep 29, 2010
 9/29/10 demo first pass at grid layout for plate charges
